<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/togglebtn"
        android:id="@+id/checkboxLight1"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"
        android:checked="false"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wb_sunny_black_24dp"
        android:layout_toLeftOf="@id/checkboxLight1"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/list_activity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/title_paired_devices" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:background="@color/black"
        android:text="@string/off"
        android:textSize="15dp"
        android:textAlignment="center"
        android:id="@+id/off"></Button>
    <Button
        android:id="@+id/button_download"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/downloadA" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/black"
        android:text="@string/Off"
        android:textColor="@color/wht"
        android:textSize="20dp"
        android:textAlignment="center"
        android:id="@+id/off1"></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/switch1"
        android:textColor="@color/wht"
        android:textSize="15dp"
        android:background="@color/black"
        android:id="@+id/receivebroadcast"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/Reg"
        android:textSize="15dp"
        android:textColor="@color/wht"
        android:background="@color/black"
        android:id="@+id/systemrecords"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/on"
        android:textSize="15dp"
        android:textColor="@color/wht"
        android:background="@color/black"
        android:id="@+id/enable"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="notify"
        android:id="@+id/button_noti"
        android:onClick="sendNotification"/>
    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff"
        android:visibility="gone" />


    <!--<ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="450dp"
        android:choiceMode="singleChoice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="Paired devices:"
        android:id="@+id/textView2"
        android:textColor="#ff34ff06"
        android:textSize="25dp"
        ></TextView>-->

</RelativeLayout>